--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html lang="en">
 <head>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="/node_modules/primeicons/primeicons.css" />
+<link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/themes/nova-light/theme.css" />
+<link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/primeng.min.css" />
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyACD1JYXQ6mvP1KE86eZYOUubEmYLiB8es"></script>
   <meta charset="utf-8">
   <title>Mapapp</title>
   <base href="/">
