--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,10 @@
 <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/themes/nova-light/theme.css" />
 <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/primeng.min.css" />
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyACD1JYXQ6mvP1KE86eZYOUubEmYLiB8es"></script>
-  <meta charset="utf-8">
+<link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Poppins&display=swap" rel="stylesheet">
+<meta charset="utf-8">
   <title>Mapapp</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
